--- a/index.html
+++ b/index.html
@@ -373,6 +373,7 @@ var mapProp = {
   zoom:17,
   scrollwheel:false,
   draggable:false,
+  key: "AIzaSyBN7o3pY_tWjwpiMgqgug7hm-mPJLH_oG8",
   mapTypeId:google.maps.MapTypeId.ROADMAP
   };
 
