--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
 <div id="googleMap" style="height:400px;width:100%;"></div>
 
 <!-- Add Google Maps -->
-<script src="https://maps.googleapis.com/maps/api/js"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBN7o3pY_tWjwpiMgqgug7hm-mPJLH_oG8" type="text/javascript"></script>
 <script>
 var myCenter = new google.maps.LatLng(53.921864, 27.562445);
 
@@ -373,7 +373,6 @@ var mapProp = {
   zoom:17,
   scrollwheel:false,
   draggable:false,
-  key: "AIzaSyBN7o3pY_tWjwpiMgqgug7hm-mPJLH_oG8",
   mapTypeId:google.maps.MapTypeId.ROADMAP
   };
 
