--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@
 <body id="sls_it" data-spy="scroll" data-target=".navbar" data-offset="60" style="overflow-x: hidden;">
 
 <nav class="navbar navbar-default navbar-fixed-top">
-  <div class="container">
+  <!--<div class="container">-->
+  <div>
     <div class="col-sm-5">
       <!--<a class="navbar-brand" href="#sls_it"><img src="logo-2.png" style="width:10%"></a>-->
-      <img src="img/logo-2.png" style="width:23%; margin-top:2%">
+      <img src="img/logo-2.png" style="width:12%; margin-top:1%;">
     </div>
     <div class="collapse navbar-collapse" id="slsNav">
-      <ul class="nav navbar-nav navbar-right" style="letter-spacing:2px">
+      <ul class="nav navbar-nav navbar-right" style="letter-spacing:2px; margin-right: 1%">
         <li><a href="#about">О компании</a></li>
         <li><a href="#partners">Что мы можем предложить</a></li>
         <li><a href="#portfolio">Технологии</a></li>
