--- a/indexen.html
+++ b/indexen.html
@@ -21,8 +21,12 @@
 
 <nav class="navbar navbar-default navbar-fixed-top">
     <div>
-        <div class="col-sm-5">
-            <img src="img/logo-2.png" style="width:12%; margin-top:1%;">
+        <div class="navbar-header" style="margin-left: 4%">
+            <ul class="nav navbar-nav navbar-left">
+                <li><a href="index.html">RU</a></li>
+                <li><a href="indexen.html">EN</a></li>
+            </ul>
+
         </div>
         <div class="collapse navbar-collapse" id="slsNav">
             <ul class="nav navbar-nav navbar-right" style="letter-spacing:2px; margin-right: 1%">
